# Axos

./: .dockerignore  .env.example  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  RUN.md  TODO.md  dev-requirements.txt  pip-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci_utils.yml  lint_and_commit.yml  python_reusable.yml  top_level.yml
docker/odyssey/: Dockerfile.backend.odyssey  entrypoint.sh
docker/odyssey/frontend/: Dockerfile.frontend.radiology_reporter
docs/: development.mdx  introduction.mdx  mint.json  quickstart.mdx
projects/repo_reader/: README.md  app.py  code_analyzer.py  pyproject.toml
projects/repo_reader/src/: config.py  file_processing.py  main.py  questions.py
projects/repo_reader/src/agents/: refactoring_agent.py
projects/repo_reader/src/config/: config.py
projects/repo_reader/src/core/: code_analyzer.py  code_refactorer.py  dependency_graph.py  file_processing.py  listener.py  question_context.py  questions.py
projects/repo_reader/src/core/agents/: analyzing_agent.py  chat_agent.py  refactoring_agent.py
projects/repo_reader/src/models/: question_context.py
projects/repo_reader/src/utils/: file_processing.py  split_code.py
src/: RUN.md  app.py
src/api/v1/: views.py
src/core/: async_worker.py  vision_model.py
src/core/metrics/: temporal_coherence.py
src/sdk/: __init__.py  client.py  exceptions.py
src/sdk/models/: video_generation.py
src/utils/: file_handling.py
templates/pylibrary/: cookiecutter.json  pyproject.toml
templates/pylibrary/.github/workflows/: ci_{{cookiecutter.package_name}}.yml
templates/pylibrary/{{cookiecutter.package_name}}/: pyproject.toml  setup.cfg
templates/pylibrary/{{cookiecutter.package_name}}/tests/: test_example.py
