[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shard-ai"
version = "0.1.0"
description = "LVM Observability Platform - Monitor and analyze Large Vision Models"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
    { name = "Shard AI", email = "founders@shard.video" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.6",
    "starlette>=0.41.3",
    "uvicorn>=0.34.0",
    "celery>=5.4.0",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.0.1",
    "pymongo>=4.10.1",
    "bson>=0.5.10",
    "pandas>=2.2.3",
    "secure>=1.0.1",
    "playwright>=1.49.1",
    "openai>=1.59.6",
    "google-generativeai>=0.8.3",
    "markdown>=3.7",
    "redis>=5.2.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.5",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "lpips>=0.1.4",
    "matplotlib>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
    "ruff>=0.3",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/Shard-AI/Shard"
Documentation = "https://docs.shard.video"
Repository = "https://github.com/Shard-AI/Shard.git"
"Bug Tracker" = "https://github.com/Shard-AI/Shard/issues"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["PLR2004"] 