# This file is empty, but is needed by setuptools to detect pyproject.toml (for now)
[metadata]
name = {{ cookiecutter.package_name }}
version = 0.1.0
description = {{ cookiecutter.package_description }}
author = {{ cookiecutter.owner_full_name }}
author_email = {{ cookiecutter.owner_email_address }}
